# SAVEPIPE

./: .gitignore  README.md  pyproject.toml  setup.py  t-min.py
Reports/: 20250712_181928_SAVEPIPE_report_SAVEPIPE_20250712_181928.txt  20250712_181928_SAVEPIPE_summary_20250712_181928.txt  20250713_145504_SAVEPIPE_report_SAVEPIPE_20250713_145504.txt  20250713_145504_SAVEPIPE_summary_20250713_145504.txt  20250713_145720_SAVEPIPE_report_SAVEPIPE_20250713_145720.txt  20250713_145720_SAVEPIPE_summary_20250713_145720.txt  20250713_150018_SAVEPIPE_report_SAVEPIPE_20250713_150018.txt  20250713_150018_SAVEPIPE_summary_20250713_150018.txt  20250713_150202_SAVEPIPE_report_SAVEPIPE_20250713_150202.txt  20250713_150202_SAVEPIPE_summary_20250713_150202.txt  20250713_150353_SAVEPIPE_report_SAVEPIPE_20250713_150353.txt  20250713_150353_SAVEPIPE_summary_20250713_150353.txt  20250713_150629_SAVEPIPE_report_SAVEPIPE_20250713_150629.txt  20250713_150629_SAVEPIPE_summary_20250713_150629.txt  20250713_151325_SAVEPIPE_report_SAVEPIPE_20250713_151325.txt  20250713_151325_SAVEPIPE_summary_20250713_151325.txt  20250713_151453_SAVEPIPE_report_SAVEPIPE_20250713_151453.txt  20250713_151453_SAVEPIPE_summary_20250713_151453.txt  20250713_165614_SAVEPIPE_report_SAVEPIPE_20250713_165614.txt  20250713_165614_SAVEPIPE_summary_20250713_165614.txt  20250714_185435_SAVEPIPE_report_SAVEPIPE_20250714_185435.txt  20250714_185454_SAVEPIPE_report_SAVEPIPE_20250714_185454.txt  20250714_185631_SAVEPIPE_report_SAVEPIPE_20250714_185631.txt  20250714_185733_SAVEPIPE_report_SAVEPIPE_20250714_185733.txt  (+19 more)
tmin/: cli.py  (+3 more)
(+22 files in other folders)
