[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "savepipe"
version = "0.1.0"
description = "Pipe Thickness Analysis & Retirement Planning for Mechanical Integrity Engineering"
authors = [
    { name="Andrew Trepagnier", email="andrew.trepagnier@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.5"
]

[project.scripts]
savepipe = "savepipe.cli:main"

[tool.setuptools.packages.find]
where = ["."]